Updated style + added coffee link
- Images look better on phone now
- Buy Me A Coffee link

--- a/src/built.css
+++ b/src/built.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.4.4 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.3 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -833,6 +833,10 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-\[this-is\\\\\] {
