--- a/src/unbuilt.css
+++ b/src/unbuilt.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 .topograph-bg{
     background-color: #000000;
